test/conformance/chainsaw/assert/allow-existing-violations/ns-ready.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    kubernetes.io/metadata.name: test
    size: unknown
