test/conformance/chainsaw/assert/allow-existing-violations/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-old-object
spec:
  background: false
  rules:
    - name: require-labels
      match:
        all:
        - resources:
            operations:
              - CREATE
              - UPDATE
            kinds:
              - Namespace
      validate:
        failureAction: Enforce
        message: "The label `size` is required"
        pattern:
          metadata:
            labels:
              size: "small | medium | large"
