test/conformance/chainsaw/assert/allow-existing-violations/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-old-object
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - create:
        file: ns.yaml
    - assert:
        file: ns-ready.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-old-object
  - name: step-03
    try:
    - update:
        file: ns-update.yaml
  - name: step-04
    try:
    - update:
        file: ns-update-good.yaml
  - name: step-05
    try:
    - update:
        file: ns-update-bad.yaml
        expect:
        - check:
            ($error != null): true
